--- a/index.html
+++ b/index.html
@@ -701,12 +701,12 @@
                 <div class="col-lg-12">
                     <div class="section-title text-center mb--50"><span class="subtitle">Где я работаю</span>
                         <h2 class="title">Выезд по Тбилиси</h2>
-                        <p class="description">Работаю по всему Тбилиси. Адрес: Гурамишвили 23а. Выезд в течение часа.<br></p>
+                        <p class="description">Работаю по всему Тбилиси. Адрес: проспект Давида Гурамишвили, 23А. Выезд в течение часа.<br></p>
                     </div>
                 </div>
                 <div class="col-lg-12">
                     <div class="rn-contact-map-area position-relative">
-                        <!-- Обновленная карта с адресом Гурамишвили 23а -->
+                        <!-- Обновленная карта с адресом проспект Давида Гурамишвили, 23А -->
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2977.1234567890123!2d44.77123456789012!3d41.72123456789012!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40447c7b12345678%3A0x1234567890abcdef!2z0KfQtdC70YzQvdCw0YbQuNC-0LLQsNGPINGI0LrQvtCz0LjRgdGC0LDQvQ!5e0!3m2!1sru!2sge!4v1711456234567!5m2!1sru!2sge" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                      <div class="purchase-btn mt--50 text-center"><a class="btn-transparent" href="tel:+995558242910">Позвонить: +995 558 242 910</a></div>
@@ -745,7 +745,7 @@
                                 </a>
                             </div>
                             <p>© 2024 Выездной ремонт компьютеров в Тбилиси. Все права защищены.</p>
-                            <p>Адрес: Гурамишвили 23а</p>
+                            <p>Адрес: проспект Давида Гурамишвили, 23А</p>
                         </div>
                     </div>
                     <div class="col-lg-2 col-xl-2 offset-xl-1 col-md-6 col-sm-6 col-12 mt_mobile--40">
@@ -793,7 +793,7 @@
                                 <li>Телефон: <a href="tel:+995558242910">+995 558 242 910</a></li>
                                 <li>Email: <a href="mailto:myhina123@mail.ru">myhina123@mail.ru</a></li>
                                 <li>Telegram: <a href="https://t.me/Allrttt" target="_blank">@Allrttt</a></li>
-                                <li>Адрес: Гурамишвили 23а</li>
+                                <li>Адрес: проспект Давида Гурамишвили, 23А</li>
                             </ul>
                             <div class="social-share-inner mt--20">
                                 <ul class="social-share social-style--2 d-flex justify-content-start liststyle">
