--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+<meta name="google-site-verification" content="brsXh7DRTYXOu06OYaSt4qUp5VUtd1PSo1Or8RrOvyc" />
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Выездной ремонт компьютеров и ноутбуков в Тбилиси — Установка Windows, чистка, сеть</title>
@@ -866,3 +867,4 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/js/all.min.js"></script>
 </body>
 </html>
+
