--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+ <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="google-site-verification" content="brsXh7DRTYXOu06OYaSt4qUp5VUtd1PSo1Or8RrOvyc" />
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -867,4 +868,5 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/js/all.min.js"></script>
 </body>
 </html>
+
 
