--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<meta name="yandex-verification" content="0ac4280d2a549f8b" />
 <meta name="google-site-verification" content="brsXh7DRTYXOu06OYaSt4qUp5VUtd1PSo1Or8RrOvyc" />
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -869,6 +870,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/js/all.min.js"></script>
 </body>
 </html>
+
 
 
 
